--- a/index.html
+++ b/index.html
@@ -5,14 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-</head>
+
 
 <!-- 파비콘 -->
 <link rel="icon" type="image/png" href="images/favicon.png">
 <!-- 폰트 -->
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700&family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet">
 
-<link rel="stylesheet" href="">
+<link rel="stylesheet" href="style.css">
+<script src="main.js" defer></script>
+</head>
+
 <body>
     
 </body>
