--- a/index.html
+++ b/index.html
@@ -1,22 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
 
 
-<!-- 파비콘 -->
-<link rel="icon" type="image/png" href="images/favicon.png">
-<!-- 폰트 -->
-<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700&family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <!-- 파비콘 -->
+    <link rel="icon" type="image/png" href="images/favicon.png">
+    <!-- 폰트 -->
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700&family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet">
 
-<link rel="stylesheet" href="style.css">
-<script src="main.js" defer></script>
-</head>
-
-<body>
-    
-</body>
+    <link rel="stylesheet" href="style.css">
+    <script src="main.js" defer></script>
+    </head>
+    <body>
+        <!-- 네비게이션 -->
+        <nav id="navbar">
+            <div class="navbar_logo">
+                <img src="">
+                <a href="">HEESOO</a>
+            </div>
+            <ul class="navbar_menu">
+                <!-- alt + shift 동시에 눌러서 마우스로 끌어당기면 동시에 작성 가능 -->
+                <li class="navbar_menu_item">About me <span></span></li> 
+                <li class="navbar_menu_item">Works <span></span></li>
+                <li class="navbar_menu_item">Contact <span></span></li>
+            </ul>
+        </nav>
+        <!-- 내 소개 -->
+        <section id="aboutme"></section>
+        <!-- 툴 -->
+        <section id="skills"></section>
+        <!-- 작업물 -->
+        <section id="works"></section>
+        <!-- 연락처 -->
+        <section id="contact"></section>
+    </body>
 </html>
