--- a/index.html
+++ b/index.html
@@ -4,35 +4,33 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
-
+        <title>Heesoo</title>
 
     <!-- 파비콘 -->
     <link rel="icon" type="image/png" href="images/favicon.png">
     <!-- 폰트 -->
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700&family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet">
-
-    <link rel="stylesheet" href="style.css">
+    <!-- css -->
+    <link rel="stylesheet" href="stylesheet/common.css">
+    <link rel="stylesheet" href="stylesheet/home.css">
+    <!-- javascript -->
     <script src="main.js" defer></script>
     </head>
     <body>
         <!-- 네비게이션 -->
         <nav id="navbar">
             <div class="navbar_logo">
-                <img src="">
-                <a href="">HEESOO</a>
+                <a href="">HEESOO<span>'</span>s PORTFOLIO</a>
             </div>
-            <ul class="navbar_menu">
+            <div class="navbar_menu">
                 <!-- alt + shift 동시에 눌러서 마우스로 끌어당기면 동시에 작성 가능 -->
-                <li class="navbar_menu_item">About me <span></span></li> 
-                <li class="navbar_menu_item">Works <span></span></li>
-                <li class="navbar_menu_item">Contact <span></span></li>
-            </ul>
+                <a href="" class="navbar_menu_item">ABOUT ME <span></span></a> 
+                <a href="" class="navbar_menu_item">WORKS <span></span></a>
+                <a href="" class="navbar_menu_item">CONTACT <span></span></a>
+            </div>
         </nav>
         <!-- 내 소개 -->
-        <section id="aboutme"></section>
-        <!-- 툴 -->
-        <section id="skills"></section>
+        <section id="about"></section>
         <!-- 작업물 -->
         <section id="works"></section>
         <!-- 연락처 -->
