--- a/00. index.html
+++ b/00. index.html
@@ -3,13 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
         <title>Heesoo</title>
 
     <!-- 파비콘 -->
     <link rel="icon" type="image/png" href="images/favicon.png">
-    <!-- 폰트 -->
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700&family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet">
     <!-- css -->
     <link rel="stylesheet" href="stylesheet/common.css">
     <link rel="stylesheet" href="stylesheet/home.css">
@@ -24,9 +22,9 @@
             </div>
             <div class="navbar_menu">
                 <!-- alt + shift 동시에 눌러서 마우스로 끌어당기면 동시에 작성 가능 -->
-                <a href="" class="navbar_menu_item">ABOUT ME <span></span></a> 
-                <a href="" class="navbar_menu_item">WORKS <span></span></a>
-                <a href="" class="navbar_menu_item">CONTACT <span></span></a>
+                <a href="" class="navbar_menu_item">ABOUT ME<span></span></a> 
+                <a href="" class="navbar_menu_item">WORKS<span></span></a>
+                <a href="" class="navbar_menu_item">CONTACT<span></span></a>
             </div>
         </nav>
         <!-- 내 소개 -->
@@ -34,6 +32,8 @@
         <!-- 작업물 -->
         <section id="works"></section>
         <!-- 연락처 -->
-        <section id="contact"></section>
+        <section id="contact">
+
+        </section>
     </body>
 </html>
