--- a/00. index.html
+++ b/00. index.html
@@ -27,13 +27,32 @@
                 <a href="" class="navbar_menu_item">CONTACT<span></span></a>
             </div>
         </nav>
-        <!-- 내 소개 -->
-        <section id="about"></section>
-        <!-- 작업물 -->
-        <section id="works"></section>
-        <!-- 연락처 -->
-        <section id="contact">
-
-        </section>
+        <main>
+            <!-- 내 소개 -->
+            <section id="about" class="section" style="width: 99%;">
+                d
+            </section>
+            <!-- 작업물 -->
+            <section id="works" class="section">
+                s
+            </section>
+            <!-- 연락처 -->
+            <section id="contact" class="section">
+                s
+            </section>
+            <!-- 내 소개 -->
+            <section id="about" class="section">
+                d
+            </section>
+            <!-- 작업물 -->
+            <section id="works" class="section">
+                s
+            </section>
+            <!-- 연락처 -->
+            <section id="contact" class="section">
+                s
+            </section>
+                
+        </main>
     </body>
 </html>
