--- a/00. index.html
+++ b/00. index.html
@@ -15,44 +15,56 @@
     <script src="main.js" defer></script>
     </head>
     <body>
-        <!-- 네비게이션 -->
-        <nav id="navbar">
-            <div class="navbar_logo">
-                <a href="">HEESOO<span>'</span>s PORTFOLIO</a>
-            </div>
-            <div class="navbar_menu">
-                <!-- alt + shift 동시에 눌러서 마우스로 끌어당기면 동시에 작성 가능 -->
-                <a href="" class="navbar_menu_item">ABOUT ME<span></span></a> 
-                <a href="" class="navbar_menu_item">WORKS<span></span></a>
-                <a href="" class="navbar_menu_item">CONTACT<span></span></a>
-            </div>
-        </nav>
-        <main>
-            <!-- 내 소개 -->
-            <section id="about" class="section" style="width: 99%;">
-                d
-            </section>
-            <!-- 작업물 -->
-            <section id="works" class="section">
-                s
-            </section>
-            <!-- 연락처 -->
-            <section id="contact" class="section">
-                s
-            </section>
-            <!-- 내 소개 -->
-            <section id="about" class="section">
-                d
-            </section>
-            <!-- 작업물 -->
-            <section id="works" class="section">
-                s
-            </section>
-            <!-- 연락처 -->
-            <section id="contact" class="section">
-                s
-            </section>
-                
-        </main>
+        <div class="wrapper">
+            <!-- 네비게이션 -->
+            <nav id="navbar">
+                <div class="navbar_logo">
+                    <a href="">HEESOO<span>'</span>s PORTFOLIO</a>
+                </div>
+                <div class="navbar_menu">
+                    <!-- alt + shift 동시에 눌러서 마우스로 끌어당기면 동시에 작성 가능 -->
+                    <a href="" class="navbar_menu_item">ABOUT ME<span></span></a> 
+                    <a href="" class="navbar_menu_item">WORKS<span></span></a>
+                    <a href="" class="navbar_menu_item">CONTACT<span></span></a>
+                </div>
+            </nav>
+            <main>
+                <!-- 내 소개 -->
+                <section id="about" class="section">
+                    <!-- <img src="images/home_background.png"> -->
+                </section>
+                <!-- 작업물 -->
+                <section id="works" class="section">
+                    s
+                </section>
+                <!-- 연락처 -->
+                <section id="contact" class="section">
+                    s
+                </section>
+                <!-- 내 소개 -->
+                <section id="about" class="section">
+                    d
+                </section>
+                <!-- 작업물 -->
+                <section id="works" class="section">
+                    s
+                </section>
+                <!-- 연락처 -->
+                <section id="contact" class="section">
+                    s
+                </section>
+            </main>
+            <footer>
+                <h1>Let<span>'</span>s Talk</h1>
+                <div class="footer_info">
+                    <span>E-MAIL</span>
+                    <span>480angela@gmail.com</span>
+                    <span>PH</span>
+                    <span>010.6405.1993</span>
+                </div>
+                <p class="copyright">© 2022 Heesoo. All rights reserved.
+                </p>
+            </footer>
+        </div>
     </body>
 </html>
