--- a/00. index.html
+++ b/00. index.html
@@ -31,7 +31,9 @@
             <main>
                 <!-- 내 소개 -->
                 <section id="about" class="section">
-                    <!-- <img src="images/home_background.png"> -->
+                    <h2 class="intro">
+                        UX Design = 배려<br>사용자를 배려하는 UX/UI 디자이너,<br>윤희수 입니다.
+                    </h2>
                 </section>
                 <!-- 작업물 -->
                 <section id="works" class="section">
