--- a/00. index.html
+++ b/00. index.html
@@ -9,8 +9,8 @@
     <!-- 파비콘 -->
     <link rel="icon" type="image/png" href="images/favicon.png">
     <!-- css -->
-    <link rel="stylesheet" href="stylesheet/common.css">
-    <link rel="stylesheet" href="stylesheet/home.css">
+    <link rel="stylesheet" href="common.css">
+    <link rel="stylesheet" href="home.css">
     <!-- javascript -->
     <script src="main.js" defer></script>
     </head>
@@ -34,6 +34,7 @@
                     <h2 class="intro">
                         UX Design = 배려<br>사용자를 배려하는 UX/UI 디자이너,<br>윤희수 입니다.
                     </h2>
+                    <!-- <img src="images/home_background.png"> -->
                 </section>
                 <!-- 작업물 -->
                 <section id="works" class="section">
