--- a/00. index.html
+++ b/00. index.html
@@ -29,31 +29,19 @@
                 </div>
             </nav>
             <main>
-                <!-- 내 소개 -->
+                <!-- UX란 -->
+                <section id="intro" class="section">
+                    <p>
+                        UX Design = <strong>배려</strong><br><strong>사용자를 배려하는</strong> 
+                        UX/UI 디자이너 ,<br><strong>윤희수</strong> 입니다 <span>.</span>
+                    </p>
+                </section>
+                <!-- about me -->
                 <section id="about" class="section">
-                    <h2 class="intro">
-                        UX Design = 배려<br>사용자를 배려하는 UX/UI 디자이너,<br>윤희수 입니다.
-                    </h2>
-                    <!-- <img src="images/home_background.png"> -->
+                    s
                 </section>
                 <!-- 작업물 -->
                 <section id="works" class="section">
-                    s
-                </section>
-                <!-- 연락처 -->
-                <section id="contact" class="section">
-                    s
-                </section>
-                <!-- 내 소개 -->
-                <section id="about" class="section">
-                    d
-                </section>
-                <!-- 작업물 -->
-                <section id="works" class="section">
-                    s
-                </section>
-                <!-- 연락처 -->
-                <section id="contact" class="section">
                     s
                 </section>
             </main>
