--- a/00. index.html
+++ b/00. index.html
@@ -23,8 +23,8 @@
                 </div>
                 <div class="navbar_menu">
                     <!-- alt + shift 동시에 눌러서 마우스로 끌어당기면 동시에 작성 가능 -->
-                    <a href="" class="navbar_menu_item">ABOUT ME<span></span></a> 
-                    <a href="" class="navbar_menu_item">WORKS<span></span></a>
+                    <a href="" class="navbar_menu_item about">ABOUT ME<span></span></a> 
+                    <a href="/Users/heesoo/Documents/GitHub/portfolio-2022/01. work_ark.html" class="navbar_menu_item work">WORKS<span></span></a>
                     <a href="" class="navbar_menu_item">CONTACT<span></span></a>
                 </div>
             </nav>
