--- a/01. work_ark.html
+++ b/01. work_ark.html
@@ -24,7 +24,7 @@
                 <div class="navbar_menu">
                     <!-- alt + shift 동시에 눌러서 마우스로 끌어당기면 동시에 작성 가능 -->
                     <a href="" class="navbar_menu_item">ABOUT ME<span></span></a> 
-                    <a href="" class="navbar_menu_item">WORKS<span></span></a>
+                    <a href="#" onclick="location.href='01.work_ark.html'" class="navbar_menu_item">WORKS<span></span></a>
                     <a href="" class="navbar_menu_item">CONTACT<span></span></a>
                 </div>
             </nav>
