--- a/04. work_hycare.html
+++ b/04. work_hycare.html
@@ -4,13 +4,12 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
-        <title>Heesoo</title>
+        <title>HY-CARE</title>
 
     <!-- 파비콘 -->
     <link rel="icon" type="image/png" href="images/favicon.png">
     <!-- css -->
     <link rel="stylesheet" href="common.css">
-    <link rel="stylesheet" href="home.css">
     <!-- javascript -->
     <script src="main.js" defer></script>
     </head>
@@ -22,27 +21,18 @@
                     <a href="#" onclick="location.href='index.html'" >HEESOO<span>'</span>s PORTFOLIO</a>
                 </div>
                 <div class="navbar_menu">
-                    <!-- alt + shift 동시에 눌러서 마우스로 끌어당기면 동시에 작성 가능 -->
                     <a href="#" onclick="location.href='04. about.html'" class="navbar_menu_item">ABOUT ME<span></span></a> 
                     <a href="#" onclick="location.href='01. work_ark.html'" class="navbar_menu_item">WORKS<span></span></a>
-                    <a href="#" class="navbar_menu_item">CONTACT<span></span></a>
+                    <a href="" class="navbar_menu_item">CONTACT<span></span></a>
                 </div>
             </nav>
             <main>
-                <!-- UX란 -->
-                <section id="intro" class="section">
-                    <p>
-                        UX Design = <strong>배려</strong><br><strong>사용자를 배려하는</strong> 
-                        UX/UI 디자이너 ,<br><strong>윤희수</strong> 입니다 <span>.</span>
-                    </p>
-                </section>
-                <!-- about me -->
-                <section id="about" class="section">
-                    s
-                </section>
-                <!-- 작업물 -->
-                <section id="works" class="section">
-                    s
+                <!-- second nav -->
+                <section class="header">
+                    <a href="#" onclick="location.href='01. work_ark.html'" class="header_item">nEQMS_ARK<span></span></a>
+                    <a href="#" class="header_item">Sputter<span></span></a> 
+                    <a href="#" onclick="location.href='03. work_smartDL.html'" class="header_item">Smart Doorlock<span></span></a> 
+                    <a href="#" onclick="location.href='04. work_hycare.html'" class="header_item active">HY-CARE<span></span></a> 
                 </section>
             </main>
             <footer>
