--- a/01. work_ark.html
+++ b/01. work_ark.html
@@ -10,7 +10,6 @@
     <link rel="icon" type="image/png" href="images/favicon.png">
     <!-- css -->
     <link rel="stylesheet" href="common.css">
-    <link rel="stylesheet" href="home.css">
     <!-- javascript -->
     <script src="main.js" defer></script>
     </head>
@@ -19,30 +18,21 @@
             <!-- 네비게이션 -->
             <nav id="navbar">
                 <div class="navbar_logo">
-                    <a href="">HEESOO<span>'</span>s PORTFOLIO</a>
+                    <a href="#" onclick="location.href='index.html'" >HEESOO<span>'</span>s PORTFOLIO</a>
                 </div>
                 <div class="navbar_menu">
-                    <!-- alt + shift 동시에 눌러서 마우스로 끌어당기면 동시에 작성 가능 -->
-                    <a href="" class="navbar_menu_item">ABOUT ME<span></span></a> 
-                    <a href="#" onclick="location.href='01.work_ark.html'" class="navbar_menu_item">WORKS<span></span></a>
+                    <a href="#" onclick="location.href='04. about.html'" class="navbar_menu_item">ABOUT ME<span></span></a> 
+                    <a href="#" onclick="location.href='01. work_ark.html'" class="navbar_menu_item active">WORKS<span></span></a>
                     <a href="" class="navbar_menu_item">CONTACT<span></span></a>
                 </div>
             </nav>
             <main>
-                <!-- UX란 -->
-                <section id="intro" class="section">
-                    <p>
-                        UX Design = <strong>배려</strong><br><strong>사용자를 배려하는</strong> 
-                        UX/UI 디자이너 ,<br><strong>윤희수</strong> 입니다 <span>.</span>
-                    </p>
-                </section>
-                <!-- about me -->
-                <section id="about" class="section">
-                    s
-                </section>
-                <!-- 작업물 -->
-                <section id="works" class="section">
-                    s
+                <!-- second nav -->
+                <section class="header">
+                    <a href="#" onclick="location.href='01. work_ark.html'" class="header_item active">nEQMS_ARK<span></span></a>
+                    <a href="#" class="header_item">Sputter<span></span></a> 
+                    <a href="#" onclick="location.href='03. work_smartDL.html'" class="header_item">Smart Doorlock<span></span></a> 
+                    <a href="#" onclick="location.href='04. work_hycare.html'" class="header_item">HY-CARE<span></span></a> 
                 </section>
             </main>
             <footer>
