--- a/03. work_smartDL.html
+++ b/03. work_smartDL.html
@@ -22,7 +22,7 @@
                 </div>
                 <div class="navbar_menu">
                     <a href="#" onclick="location.href='04. about.html'" class="navbar_menu_item">ABOUT ME<span></span></a> 
-                    <a href="#" onclick="location.href='01. work_ark.html'" class="navbar_menu_item work">WORKS<span></span></a>
+                    <a href="#" onclick="location.href='01. work_ark.html'" class="navbar_menu_item active">WORKS<span></span></a>
                     <a href="" class="navbar_menu_item">CONTACT<span></span></a>
                 </div>
             </nav>
@@ -33,6 +33,11 @@
                     <a href="#" class="header_item">Sputter<span></span></a> 
                     <a href="#" onclick="location.href='03. work_smartDL.html'" class="header_item active">Smart Doorlock<span></span></a> 
                     <a href="#" onclick="location.href='04. work_hycare.html'" class="header_item">HY-CARE<span></span></a> 
+                </section>
+                <!-- 메인 -->
+                <section class="main">
+                    <div class="smartDL_main_first"></div>
+                    <div class="smartDL_main_second"></div>
                 </section>
             </main>
             <footer>
