--- a/01. work_ark.html
+++ b/01. work_ark.html
@@ -34,6 +34,11 @@
                     <a href="#" onclick="location.href='03. work_smartDL.html'" class="header_item">Smart Doorlock<span></span></a> 
                     <a href="#" onclick="location.href='04. work_hycare.html'" class="header_item">HY-CARE<span></span></a> 
                 </section>
+                <!-- 컨텐츠 -->
+                <section class="main">
+                    <div class="ark_main_first"></div>
+                    <div class="ark_main_second"></div>
+                </section>
             </main>
             <footer>
                 <h1>Let<span>'</span>s Talk</h1>
