--- a/04. work_hycare.html
+++ b/04. work_hycare.html
@@ -34,6 +34,11 @@
                     <a href="#" onclick="location.href='03. work_smartDL.html'" class="header_item">Smart Doorlock<span></span></a> 
                     <a href="#" onclick="location.href='04. work_hycare.html'" class="header_item active">HY-CARE<span></span></a> 
                 </section>
+                 <!-- 메인 -->
+                 <section class="main">
+                    <div class="hycare_main_first"></div>
+                    <div class="hycare_main_second"></div>
+                </section>
             </main>
             <footer>
                 <h1>Let<span>'</span>s Talk</h1>
