--- a/04. work_hycare.html
+++ b/04. work_hycare.html
@@ -30,7 +30,7 @@
                 <!-- second nav -->
                 <section class="header">
                     <a href="#" onclick="location.href='01. work_ark.html'" class="header_item">nEQMS_ARK<span></span></a>
-                    <a href="#" class="header_item">Sputter<span></span></a> 
+                    <!-- <a href="#" class="header_item">Sputter<span></span></a>  -->
                     <a href="#" onclick="location.href='03. work_smartDL.html'" class="header_item">Smart Doorlock<span></span></a> 
                     <a href="#" onclick="location.href='04. work_hycare.html'" class="header_item active">HY-CARE<span></span></a> 
                 </section>
@@ -38,6 +38,15 @@
                  <section class="main">
                     <div class="hycare_main_first"></div>
                     <div class="hycare_main_second"></div>
+                    <div class="hycare_main_third"></div>
+                    <div class="hycare_main_four"></div>
+                    <div class="hycare_main_five">
+                        <p>HYCARE는 이렇게 사용해요!</p>
+                        <video controls width="1200">
+                            <source src="images/HYCARE.mp4" type="video/mp4">
+                        </video> 
+                    </div>
+                    <div class="hycare_main_six">
                 </section>
             </main>
             <footer>
