--- a/03. work_smartDL.html
+++ b/03. work_smartDL.html
@@ -30,7 +30,7 @@
                 <!-- second nav -->
                 <section class="header">
                     <a href="#" onclick="location.href='01. work_ark.html'" class="header_item">nEQMS_ARK<span></span></a>
-                    <a href="#" class="header_item">Sputter<span></span></a> 
+                    <!-- <a href="#" class="header_item">Sputter<span></span></a>  -->
                     <a href="#" onclick="location.href='03. work_smartDL.html'" class="header_item active">Smart Doorlock<span></span></a> 
                     <a href="#" onclick="location.href='04. work_hycare.html'" class="header_item">HY-CARE<span></span></a> 
                 </section>
