--- a/index.html
+++ b/index.html
@@ -31,17 +31,40 @@
             <main>
                 <!-- UX란 -->
                 <section id="intro" class="section">
-                    <p>
-                        UX Design = <strong>배려</strong><br><strong>사용자를 배려하는</strong> 
-                        UX/UI 디자이너 ,<br><strong>윤희수</strong> 입니다 <span>.</span>
-                    </p>
+                    <p>디자인으로 기술과 사람을 이어주는 <strong>다리 ,</strong><br>
+                       UX/UI 디자이너<br>
+                       <strong>윤희수</strong> 입니다<span>.</span></p>
                 </section>
                 <!-- about me -->
                 <section id="about" class="section">
                 </section>
                 <!-- 작업물 -->
                 <section id="works" class="section">
-                    s
+                    <p class="title">MY WORKS</p>
+                    <div class="work_content">
+                        <img src="images/work_1.png">
+                        <div class="work_info">
+                            <h4>nMES ARK</h4>
+                            <p>공장별 장비 에러 분석 / 대시보드 / 데이터 시각화</p>
+                            <a href="#" onclick="location.href='01. work_ark.html'">자세히 보기 ></a>
+                        </div>
+                    </div>
+                    <div class="work_content">
+                        <div class="work_info">
+                            <h4>Smart Doorlock</h4>
+                            <p>스마트 도어락 / 모바일 앱</p>
+                            <a href="#" onclick="location.href='03. work_smartDL.html'">자세히 보기 ></a>
+                        </div>
+                        <img src="images/work_2.png">
+                    </div>
+                    <div class="work_content">
+                        <img src="images/work_3.png">
+                        <div class="work_info">
+                            <h4>HYCARE</h4>
+                            <p>바디 컨디션 회복 토탈 솔루션 / 산학프로젝트 with 코웨이</p>
+                            <a href="#" onclick="location.href='04. work_hycare.html'" >자세히 보기 ></a>
+                        </div>
+                    </div>
                 </section>
             </main>
             <footer>
