--- a/01. work_ark.html
+++ b/01. work_ark.html
@@ -21,9 +21,8 @@
                     <a href="#" onclick="location.href='index.html'" >HEESOO<span>'</span>s PORTFOLIO</a>
                 </div>
                 <div class="navbar_menu">
-                    <a href="#" onclick="location.href='04. about.html'" class="navbar_menu_item">ABOUT ME<span></span></a> 
                     <a href="#" onclick="location.href='01. work_ark.html'" class="navbar_menu_item active">WORKS<span></span></a>
-                    <a href="" class="navbar_menu_item">CONTACT<span></span></a>
+                    <!-- <a class="navbar_menu_item" data-link="#contact">CONTACT<span></span></a> -->
                 </div>
             </nav>
             <main>
@@ -40,7 +39,7 @@
                     <div class="ark_main_second"></div>
                 </section>
             </main>
-            <footer>
+            <footer id="contact">
                 <h1>Let<span>'</span>s Talk</h1>
                 <div class="footer_info">
                     <span>E-MAIL</span>
