--- a/04. work_hycare.html
+++ b/04. work_hycare.html
@@ -18,17 +18,16 @@
             <!-- 네비게이션 -->
             <nav id="navbar">
                 <div class="navbar_logo">
-                    <a href="#" onclick="location.href='index.html'" >HEESOO<span>'</span>s PORTFOLIO</a>
+                    <a href="#" onclick="location.href='index.html'" >HEESOO<span>'</span>s Portfolio</a>
                 </div>
                 <div class="navbar_menu">
-                    <a href="#" onclick="location.href='01. work_ark.html'" class="navbar_menu_item">WORKS<span></span></a>
-                    <!-- <a class="navbar_menu_item" data-link="#contact">CONTACT<span></span></a> -->
+                    <a href="#" onclick="location.href='01. work_ark.html'" class="navbar_menu_item">Works<span></span></a>
                 </div>
             </nav>
             <main>
                 <!-- second nav -->
                 <section class="header">
-                    <a href="#" onclick="location.href='01. work_ark.html'" class="header_item">nEQMS_ARK<span></span></a>
+                    <a href="#" onclick="location.href='01. work_ark.html'" class="header_item">nEQMS ARK<span></span></a>
                     <!-- <a href="#" class="header_item">Sputter<span></span></a>  -->
                     <a href="#" onclick="location.href='03. work_smartDL.html'" class="header_item">Smart Doorlock<span></span></a> 
                     <a href="#" onclick="location.href='04. work_hycare.html'" class="header_item active">HY-CARE<span></span></a> 
@@ -51,9 +50,9 @@
             <footer id="contact">
                 <h1>Let<span>'</span>s Talk</h1>
                 <div class="footer_info">
-                    <span>E-MAIL</span>
-                    <span>480angela@gmail.com</span>
-                    <span>PH</span>
+                    <span>E-mail</span>
+                    <span>Heesoo.UX@gmail.com</span>
+                    <span>Phone</span>
                     <span>010.6405.1993</span>
                 </div>
                 <p class="copyright">© 2022 Heesoo. All rights reserved.
