--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!-- css -->
     <link rel="stylesheet" href="common.css">
     <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard-dynamic-subset.css" />
     <!-- javascript -->
     <script src="main.js" defer></script>
     </head>
@@ -19,20 +20,20 @@
             <!-- 네비게이션 -->
             <nav id="navbar">
                 <div class="navbar_logo">
-                    <a href="#" onclick="location.href='index.html'" >HEESOO<span>'</span>s PORTFOLIO</a>
+                    <a href="#" onclick="location.href='index.html'" >HEESOO<span>'</span>s Portfolio</a>
                 </div>
                 <div class="navbar_menu">
                     <!-- alt + shift 동시에 눌러서 마우스로 끌어당기면 동시에 작성 가능 -->
-                    <a class="navbar_menu_item" data-link="#about">ABOUT ME<span></span></a> 
-                    <a href="#" onclick="location.href='01. work_ark.html'" class="navbar_menu_item">WORKS<span></span></a>
-                    <a class="navbar_menu_item" data-link="#contact">CONTACT<span></span></a>
+                    <a class="navbar_menu_item" data-link="#about">About me<span></span></a> 
+                    <a href="#" onclick="location.href='01. work_ark.html'" class="navbar_menu_item">Woks<span></span></a>
+                    <a class="navbar_menu_item" data-link="#contact">Contact<span></span></a>
                 </div>
             </nav>
             <main>
                 <!-- UX란 -->
                 <section id="intro" class="section">
                     <p>디자인으로 기술과 사람을 이어주는 <strong>다리 ,</strong><br>
-                       UX/UI 디자이너<br>
+                       <span>UX/UI 디자이너</span><br>
                        <strong>윤희수</strong> 입니다<span>.</span></p>
                 </section>
                 <!-- about me -->
@@ -40,15 +41,15 @@
                 </section>
                 <!-- 작업물 -->
                 <section id="works" class="section">
-                    <p class="work_title">MY WORKS</p>
+                    <p class="work_title">My Works</p>
                     <div class="work_categories">
                         <button class="category_btn active" data-filter="*">All</button>
-                        <button class="category_btn" data-filter="web">WEB</button>
-                        <button class="category_btn" data-filter="mobile">MOBILE</button>
-                        <button class="category_btn" data-filter="project">PROJECT</button>
+                        <button class="category_btn" data-filter="web">Web</button>
+                        <button class="category_btn" data-filter="mobile">Mobile</button>
+                        <button class="category_btn" data-filter="project">Project</button>
                     </div>
                     <div class="work_project">
-                        <a href="#" onclick="location.href='01. work_ark.html'" class="project">
+                        <a href="#" onclick="location.href='01. work_ark.html'" class="project" data-type="web">
                             <img class="project_img" src="images/work_1.png">
                             <div class="project_description">
                                 <h4>nMES ARK</h4>
@@ -56,7 +57,7 @@
                                 <span>자세히 보기 ></span>
                             </div>
                         </a>
-                        <a href="#" onclick="location.href='03. work_smartDL.html'" class="project">
+                        <a href="#" onclick="location.href='03. work_smartDL.html'" class="project" data-type="mobile">
                             <img class="project_img" src="images/work_2.png">
                             <div class="project_description">
                                 <h4>Smart Doorlock</h4>
@@ -64,7 +65,7 @@
                                 <span>자세히 보기 ></span>
                             </div>
                         </a>
-                        <a href="#" onclick="location.href='04. work_hycare.html'" class="project">
+                        <a href="#" onclick="location.href='04. work_hycare.html'" class="project" data-type="project">
                             <img class="project_img" src="images/work_3.png">
                             <div class="project_description">
                                 <h4>HYCARE</h4>
@@ -72,16 +73,15 @@
                                 <span>자세히 보기 ></span>
                             </div>
                         </a>
-                    
                     </div>
                 </section>
             </main>
             <footer id="contact">
                 <h1>Let<span>'</span>s Talk</h1>
                 <div class="footer_info">
-                    <span>E-MAIL</span>
-                    <span>480angela@gmail.com</span>
-                    <span>PH</span>
+                    <span>E-mail</span>
+                    <span>Heesoo.UX@gmail.com</span>
+                    <span>Phone</span>
                     <span>010.6405.1993</span>
                 </div>
                 <p class="copyright">© 2022 Heesoo. All rights reserved.
