--- a/01. work_ark.html
+++ b/01. work_ark.html
@@ -21,7 +21,7 @@
                     <a href="#" onclick="location.href='index.html'" >HEESOO<span>'</span>s Portfolio</a>
                 </div>
                 <div class="navbar_menu">
-                    <a href="#" onclick="location.href='01. work_ark.html'" class="navbar_menu_item">WorkS<span></span></a>
+                    <a href="#" onclick="location.href='01. work_ark.html'" class="navbar_menu_item">Works<span></span></a>
                 </div>
             </nav>
             <main>
