--- a/index.html
+++ b/index.html
@@ -33,11 +33,14 @@
                 <!-- UX란 -->
                 <section id="intro" class="section">
                     <p>디자인으로 기술과 사람을 이어주는 <strong>다리 ,</strong><br>
-                       <span>UX/UI 디자이너</span><br>
+                       <span>UX / UI 디자이너</span><br>
                        <strong>윤희수</strong> 입니다<span>.</span></p>
                 </section>
                 <!-- about me -->
                 <section id="about" class="section">
+                </section>
+                 <!-- skills -->
+                 <section id="skill" class="section">
                 </section>
                 <!-- 작업물 -->
                 <section id="works" class="section">
