--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 <div class="navbar_menu">
                     <!-- alt + shift 동시에 눌러서 마우스로 끌어당기면 동시에 작성 가능 -->
                     <a class="navbar_menu_item" data-link="#about">About me<span></span></a> 
+                    <a class="navbar_menu_item" data-link="#skill">Skills<span></span></a> 
                     <a href="#" onclick="location.href='01. work_ark.html'" class="navbar_menu_item">Works<span></span></a>
                     <a class="navbar_menu_item" data-link="#contact">Contact<span></span></a>
                 </div>
