--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
                 <!-- 작업물 -->
                 <section id="works" class="section">
                     <p class="work_title">My Works</p>
-                    <div class="work_categories">
+                    <!-- <div class="work_categories">
                         <button class="category_btn active" data-filter="*">All</button>
                         <button class="category_btn" data-filter="web">Web</button>
                         <button class="category_btn" data-filter="mobile">Mobile</button>
                         <button class="category_btn" data-filter="project">Project</button>
-                    </div>
+                    </div> -->
                     <div class="work_project">
                         <a href="#" onclick="location.href='01. work_ark.html'" class="project" data-type="web">
                             <img class="project_img" src="images/work_1.png">
