--- a/03. work_smartDL.html
+++ b/03. work_smartDL.html
@@ -39,13 +39,13 @@
                 </section>
             </main>
             <footer id="contact">
-                <h1>Let<span>'</span>s Talk</h1>
-                <div class="footer_info">
+                <!-- <h1>Let<span>'</span>s Talk</h1> -->
+                <!-- <div class="footer_info">
                     <span>E-mail</span>
                     <span>Heesoo.UX@gmail.com</span>
                     <span>Phone</span>
                     <span>010.6405.1993</span>
-                </div>
+                </div> -->
                 <p class="copyright">© 2022 Heesoo. All rights reserved.
                 </p>
             </footer>
