--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
             <main>
                 <!-- UX란 -->
                 <section id="intro" class="section">
-                    <p>디자인으로 기술과 사람을 이어주는 <strong>다리 ,</strong><br>
-                       <span>UX / UI 디자이너</span><br>
+                    <p>Problem making first then problem solving,<br>
+                       <span>문제의 본질에 집중하는 UX / UI 디자이너</span><br>
                        <strong>윤희수</strong> 입니다<span>.</span></p>
                 </section>
                 <!-- about me -->
